Reduce testing code and add WuxiaWorld.co